k8s-gitops/overlays/dev/ingress-cert-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tv-dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  rules:
  - host: dev.tv-hub.navillasa.dev
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
